ingress-testing/ingress-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-service
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    name: nginx-ingress-controller
  type: NodePort
